# object-detection-task

./: .gitignore  DATA_PROBLEMS.md  Makefile  README.md  REPORT_eng.md  REPORT_ru.md  pyproject.toml  requirements.txt  run_detector.sh
.github/workflows/: lint.yml  test.yml
object_detection_task/baseline/: baseline.py  evaluate_baseline.py
object_detection_task/data/: preprocess_video.py
object_detection_task/detector/: detect_objects.py  object_detector.py  run_detector.py  train.py
object_detection_task/metrics/: calculate_metrics.py
resources/: baseline_metrics_test.json  metrics_val.json  thresholds.json  val_intervals.json  video_3_metrics.json  video_5_metrics.json  video_7_metrics.json
tests/: test_data.py
