[tool.poetry]
name = "object-detection-task"
version = "0.1.0"
description = ""
authors = ["kirill-push <kirillpush@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
