[tool.poetry]
name = "object-detection-task"
version = "0.1.0"
description = ""
authors = ["kirill-push <kirillpush@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.1.78"
torch = "^1.11"
gitpython = "^3.1.30"
pillow = "^10.0.1"
shapely = "^2.0.2"
tqdm = "^4.66.1"
matplotlib = "^3.7"
scikit-learn = "^1.3.2"
requests = "^2.23"
ultralytics = "^8.0.147"
setuptools = "^69.0.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^5"
lxml = "^4.9.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.8"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
exclude = [
    '.mypy_cache',
    '.pytest_cache',
    '.venv',
    '.vscode',
    '__pycache__',
    '.coverage',
    'htmlcov',
    '.ipynb_checkpoints',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
